--- a/src/index-style.css
+++ b/src/index-style.css
@@ -69,6 +69,10 @@ header, .main, .footer {
     flex-direction: column;
   }
 }
+.inline-icon {
+  width: 1em;
+}
+
 .main-info {
   box-shadow: 0 0.5px 5px lightgray;
 }
@@ -106,11 +110,16 @@ header, .main, .footer {
   width: 80px;
   border-radius: 50%;
   border: 1px solid lightgray;
+  transition: all 0.2s ease-out;
+}
+.main-info .profile-img-container .profile-img:hover {
+  cursor: pointer;
+  transform: scale(1.2);
 }
 .main-info .profile-name {
   flex-basis: 50%;
 }
-.main-info .profile-name .checkmark {
+.main-info .profile-name .inline-icon {
   width: 15px;
   background-color: #1B74E4;
   border-radius: 50%;
@@ -130,6 +139,7 @@ header, .main, .footer {
   align-items: center;
   justify-content: center;
   gap: 0.4em;
+  cursor: pointer;
 }
 .main-info .profile-link .profile-link-button span {
   color: white;
@@ -153,4 +163,72 @@ header, .main, .footer {
   height: 1.5em;
   margin-top: 0.2rem;
   gap: 0.5em;
+  cursor: pointer;
+}
+
+.profile-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  max-width: 755px;
+  margin: 0 auto;
+  border-top: 1px solid lightgray;
+}
+.profile-nav > *:nth-child(2) {
+  height: 4em;
+}
+.profile-nav .profile-nav-selections {
+  display: flex;
+  flex-direction: row;
+}
+.profile-nav .profile-nav-selections > * {
+  width: 4em;
+  text-align: center;
+  padding: 1em;
+  margin: 0.5em 0;
+  cursor: pointer;
+  transition: all 0.2s ease-out;
+}
+.profile-nav .profile-nav-selections > *:hover {
+  background-color: lightgray;
+  border-radius: 4px;
+}
+.profile-nav .curr-selection {
+  border-bottom: 2px solid #1B74E4;
+}
+.profile-nav .dropdown-selection {
+  position: relative;
+}
+.profile-nav .dropdown {
+  position: absolute;
+  background-color: white;
+  top: 3em;
+  left: -0.2em;
+  width: 15em;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  box-shadow: 0 0.5px 5px lightgray;
+  align-items: center;
+}
+.profile-nav .dropdown > * {
+  padding: 0.5em;
+  margin: 0.3em;
+  font-weight: 500;
+  cursor: pointer;
+  text-align: start;
+  transition: all 0.2s ease-out;
+}
+.profile-nav .dropdown > *:hover {
+  background-color: lightgray;
+  border-radius: 4px;
+}
+.profile-nav .dropdown-selection {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+  cursor: pointer;
 }/*# sourceMappingURL=index-style.css.map */
