--- a/src/index-style.scss
+++ b/src/index-style.scss
@@ -47,7 +47,6 @@ header, .main, .footer{
 }
 
 .main-container{
-    padding-bottom: 3em;
     box-shadow: 0 .5px 5px lightgray;
 }
 
@@ -78,7 +77,7 @@ header, .main, .footer{
     width: 1em;
 }
 
-.main-info{
+.profile-card{
 
     box-shadow: 0 .5px 5px lightgray;
 
@@ -201,8 +200,19 @@ header, .main, .footer{
     margin: 0 auto;
     border-top: 1px solid lightgray;
 
-    >*:nth-child(2){
-        height: 4em;
+    .profile-nav-right{
+        height: 3.5em;
+        width: 4em;
+
+        .dropdown-selection{
+            display: flex;
+            justify-content: center;
+
+            &:hover{
+                background-color: lightgray;
+                border-radius: 4px;
+            }
+        }
     }
 
 
