--- a/src/index-style.css
+++ b/src/index-style.css
@@ -138,12 +138,16 @@ header, .main, .footer {
   align-items: center;
   justify-content: center;
   gap: 0.4em;
+  transition: all 0.2s ease-out;
   cursor: pointer;
 }
 .profile-card .profile-link .profile-link-button span {
   color: white;
   font-weight: 500;
   font-size: 1.1em;
+}
+.profile-card .profile-link .profile-link-button:hover {
+  background-color: #165baf;
 }
 .profile-card .profile-link .cube-icon {
   width: 17px;
@@ -162,7 +166,6 @@ header, .main, .footer {
   height: 1.5em;
   margin-top: 0.2rem;
   gap: 0.5em;
-  cursor: pointer;
 }
 
 .profile-nav {
@@ -192,6 +195,7 @@ header, .main, .footer {
   flex-direction: row;
 }
 .profile-nav .profile-nav-selections > * {
+  position: relative;
   width: 4em;
   text-align: center;
   padding: 1em;
@@ -199,9 +203,19 @@ header, .main, .footer {
   cursor: pointer;
   transition: all 0.2s ease-out;
 }
+.profile-nav .profile-nav-selections > * a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .profile-nav .profile-nav-selections > *:hover {
   background-color: lightgray;
   border-radius: 4px;
+}
+.profile-nav .profile-nav-selections .currentNav {
+  border-bottom: 5px solid #1B74E4;
 }
 .profile-nav .curr-selection {
   border-bottom: 2px solid #1B74E4;
