--- a/src/index-style.scss
+++ b/src/index-style.scss
@@ -155,10 +155,16 @@ header, .main, .footer{
             justify-content: center;
             gap: .4em;
 
+            transition: all .2s ease-out;
+
             span{
                 color: white;
                 font-weight: 500;
                 font-size: 1.1em;
+            }
+
+            &:hover{
+                background-color: #165baf;
             }
 
             cursor: pointer;
@@ -184,8 +190,6 @@ header, .main, .footer{
             height: 1.5em;
             margin-top: .2rem;
             gap: .5em;
-
-            cursor: pointer;
         }
     }
 }
@@ -221,6 +225,7 @@ header, .main, .footer{
         flex-direction: row;
         
         >*{
+            position: relative;
             width: 4em;
             text-align: center;
             padding:1em;
@@ -228,11 +233,21 @@ header, .main, .footer{
             cursor: pointer;
             transition: all .2s ease-out;
 
+            a{
+                position: absolute;
+                top: 0; left: 0;
+                width: 100%; height: 100%;
+            }
+
             &:hover{
                 background-color: lightgray;
                 border-radius: 4px;
             }
             
+        }
+
+        .currentNav{
+            border-bottom: 5px solid #1B74E4;
         }
     }
 
