--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -46,6 +46,34 @@ a {
   justify-content: start;
   gap: 0.5em;
 }
+.content-home .content-home-left .photos {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+.content-home .content-home-left .photos .photos-grid {
+  display: grid;
+  grid-template: 1fr 1fr/1fr 1fr;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
+}
+.content-home .content-home-left .photos .grid-image {
+  width: 100%;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.2s ease-out;
+}
+.content-home .content-home-left .photos .grid-image:hover {
+  transform: scale(1.1);
+  box-shadow: 0.5px 0.5px 5px lightslategray;
+}
+.content-home .content-home-left .photos .grid-image-loading {
+  width: 100%;
+  height: 100px;
+  border-radius: 5px;
+  background-color: lightgray;
+}
 
 .content-review .content-review-right {
   flex-basis: 100%;
