--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -51,6 +51,38 @@ a{
                 gap: 0.5em;
             }
         }
+
+        .photos{
+            display: flex;
+            flex-direction: column;
+            gap: 1em;
+            
+            .photos-grid{
+                display: grid;
+                grid-template: 1fr 1fr / 1fr 1fr;
+                justify-content: center;
+                align-items: center;
+                gap: .5em;
+            }
+    
+            .grid-image{
+                width: 100%;
+                border-radius: 5px;
+                cursor: pointer;
+                transition: all .2s ease-out;
+
+                &:hover{
+                    transform: scale(1.1);
+                    box-shadow: .5px .5px 5px lightslategray;
+                }
+            }
+
+            .grid-image-loading{
+                width: 100%; height: 100px;
+                border-radius: 5px;
+                background-color: lightgray;
+            }
+        }
     }
 }
 
