--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -22,9 +22,111 @@ a {
 
 .content-home .content-home-right {
   flex-basis: 55%;
+  overflow: hidden;
+}
+.content-home .content-home-right .content-post {
+  min-height: 500px;
   background-color: white;
   box-shadow: 0.5px 0.5px 5px lightgray;
   border-radius: 5px;
+}
+.content-home .content-home-right .content-post .person-detail-image img, .content-home .content-home-right .content-post .reply-profile-img img {
+  width: 50px;
+  border-radius: 50%;
+  border: 1px solid lightgray;
+  aspect-ratio: 1/1;
+}
+.content-home .content-home-right .content-post .reply-profile-img img {
+  width: 40px;
+}
+.content-home .content-home-right .content-post .person-detail-flex {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 1em;
+}
+.content-home .content-home-right .content-post .person-detail-flex .person-detail-image, .content-home .content-home-right .content-post .person-detail-flex .person-detail-info {
+  padding: 0.5em;
+}
+.content-home .content-home-right .content-post .person-detail-flex .post-time {
+  font-size: 0.8rem;
+}
+.content-home .content-home-right .content-post .person-detail-flex .post-time {
+  font-size: 0.75rem;
+  color: lightslategray;
+}
+.content-home .content-home-right .content-post .post .media, .content-home .content-home-right .content-post .post .media-loading {
+  height: 400px;
+}
+.content-home .content-home-right .content-post .post .media-loading {
+  background-color: lightgray;
+}
+.content-home .content-home-right .content-post .post .post-content {
+  padding: 0 1em 1em 1em;
+}
+.content-home .content-home-right .content-post .post-interaction {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  padding: 0 0.5em;
+}
+.content-home .content-home-right .content-post .post-interaction .interaction-stats, .content-home .content-home-right .content-post .post-interaction .interaction-prompt {
+  display: flex;
+  flex-direction: row;
+  padding: 0.5em 1em;
+}
+.content-home .content-home-right .content-post .post-interaction .interaction-stats {
+  justify-content: space-between;
+  color: lightslategray;
+}
+.content-home .content-home-right .content-post .post-interaction .interaction-prompt {
+  width: 95%;
+  margin: 0 auto;
+  justify-content: space-evenly;
+  gap: 1em;
+  border-bottom: 1px solid lightslategray;
+  border-top: 1px solid lightslategray;
+  color: lightslategray;
+}
+.content-home .content-home-right .content-post .post-interaction .replies {
+  padding: 0 0.5em;
+}
+.content-home .content-home-right .content-post .post-interaction .replies .reply {
+  display: flex;
+  flex-direction: row;
+  padding: 1em 0;
+  gap: 0.5em;
+  align-items: center;
+}
+.content-home .content-home-right .content-post .post-interaction .replies .most-relevant {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  color: lightslategray;
+}
+.content-home .content-home-right .content-post .post-interaction .replies .reply-profile-content {
+  background-color: rgb(247, 247, 247);
+  box-shadow: 0.5px 0.5px 5px lightgray;
+  border-radius: 10px;
+  padding: 0.7em;
+}
+.content-home .content-home-right .content-post .post-interaction .replies .reply-profile-content .reply-profile-name {
+  font-size: 0.9rem;
+  font-weight: bold;
+}
+.content-home .content-home-right .content-post .post-interaction .replies .reply-profile-content .reply-profile-reply {
+  font-size: 0.85rem;
+}
+.content-home .content-home-right .content-post .post-interaction .replies .reply-stats {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 0.8rem;
+  color: lightslategray;
+  margin-top: 5px;
+}
+.content-home .content-home-right .content-post .post-interaction .replies .reply-stats > * {
+  padding: 0 0.5em;
 }
 .content-home .content-home-left {
   display: flex;
@@ -129,17 +231,27 @@ a {
 .content-home .content-home-left .related-pages {
   display: flex;
   flex-direction: column;
-  gap: 1em;
+  gap: 0.5em;
 }
 .content-home .content-home-left .related-pages .related-card {
   display: flex;
   flex: row;
+  align-items: center;
 }
 .content-home .content-home-left .related-pages .related-card > * {
   padding: 0.5em;
 }
-.content-home .content-home-left .related-pages .related-card .related-card-image {
-  flex-basis: 20%;
+.content-home .content-home-left .related-pages .related-card .related-card-image img, .content-home .content-home-left .related-pages .related-card .related-image-loading {
+  width: 50px;
+  border-radius: 50%;
+  border: 1px solid lightgray;
+  aspect-ratio: 1/1;
+}
+.content-home .content-home-left .related-pages .related-card .related-image-loading {
+  background-color: gray;
+}
+.content-home .content-home-left .related-pages .related-card .related-about {
+  font-size: 0.9rem;
 }
 .content-home .content-home-left .small-talk {
   font-size: 0.8rem;
