--- a/src/index-style.scss
+++ b/src/index-style.scss
@@ -77,6 +77,12 @@ header, .main, .footer{
     width: 1em;
 }
 
+.checkmark{
+    width: 0.8rem;
+    background-color: #1B74E4;
+    border-radius: 50%;
+}
+
 .profile-card{
 
     box-shadow: 0 .5px 5px lightgray;
