--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -33,6 +33,7 @@ a{
             box-shadow: .5px .5px 5px lightgray;
             border-radius: 5px;
             margin-bottom: 1em;
+            padding-bottom: 1em;
 
             // for all profile images within the post
             .person-detail-image img, .reply-profile-img img{
@@ -171,6 +172,14 @@ a{
 
                 .replies{
                     padding: 0 0.5em;
+                    
+                    .reply-to{
+                        font-size: 0.8rem;
+                        padding-bottom: 0.5em;
+                        color: lightslategray;
+                        display: flex; gap: 0.5em;
+                        align-items: center;
+                    }
 
                     .reply{
                         display: flex;
@@ -178,6 +187,7 @@ a{
                         padding: 1em 0;
                         gap: 0.5em;
                         align-items: center;
+
                     }
                     
                     .most-relevant{
@@ -193,6 +203,7 @@ a{
                         box-shadow: .5px .5px 5px lightgray;
                         border-radius: 10px;
                         padding: 0.7em;
+                        min-width: 10em;
 
                         .reply-profile-name{
                             font-size: 0.9rem;
@@ -215,8 +226,20 @@ a{
                         >*{
                             padding: 0 0.5em;
                         }
+
+                        .reply-likes:hover, .reply-to:hover{
+                            background-color: lightgray;
+                            cursor: pointer;
+                            border-radius: 5px;
+                        }
                     }
                     
+                    .sub-replies-container{
+                        padding-left: 2em;
+                        .reply{
+                            padding-top: 0;
+                        }
+                    }
                 }
 
 
