--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -162,7 +162,7 @@ a {
 .content-home .content-home-right .content-post .post-interaction .replies .most-relevant {
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  justify-content: flex-end;
   color: lightslategray;
 }
 .content-home .content-home-right .content-post .post-interaction .replies .reply-profile-content {
@@ -254,7 +254,7 @@ a {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   gap: 0.5em;
 }
 .content-home .content-home-left .photos {
