--- a/src/components/Buttons/Buttons_style.css
+++ b/src/components/Buttons/Buttons_style.css
@@ -1,32 +1,46 @@
 .submit-button{
-    border: none;
-    background-color: rgb(247, 247, 247);
-    box-shadow: .5px .5px 5px lightgray;
-    border-radius: 5px;
+  border: none;
+  background-color: rgb(247, 247, 247);
+  box-shadow: .5px .5px 5px lightgray;
+  border-radius: 5px;
 
-    transition: background-color .1s ease-out;
+  transition: background-color .1s ease-out;
 }
 
-.default-button{
-    border: none;
-    background-color: #1B74E4;
-    color: white;
-    border-radius: 5px;
-    padding: 0.5em;
+.default-blue{
+  border: none;
+  background-color: #1B74E4;
+  color: white;
+  border-radius: 5px;
+  padding: 0.5em;
 
-    transition: background-color .1s ease-out;
+  transition: background-color .1s ease-out;
+}
+
+.default-white{
+  border: none;
+  background-color: white;
+  border-radius: 5px;
+  padding: 0.5em;
+
+  transition: background-color .1s ease-out;
 }
 
 @media (hover: hover){
-    .submit-button:hover{
-        background-color: lightgray;
-        border: 1px solid lightslategray;
-        cursor: pointer;
-    }
-    
-    .default-button:hover{
-        cursor: pointer;
-        background-color: #165baf;
-    }
+  .submit-button:hover{
+    background-color: lightgray;
+    border: 1px solid lightslategray;
+    cursor: pointer;
+  }
+  
+  .default-blue:hover{
+    cursor: pointer;
+    background-color: #165baf;
+  }
+
+  .default-white:hover{
+    cursor: pointer;
+    background-color: lightgray;
+  }
 
 }
